Fix flickering animation in loader.js

--- a/src/styles/Loader.module.css
+++ b/src/styles/Loader.module.css
@@ -192,3 +192,27 @@
     opacity: 0;
   }
 }
+
+.loader {
+  font-size: 48px;
+  color: #8bfdfe;
+  display: inline-block;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  position: relative;
+}
+.loader:after {
+  content: "";
+  height: 4px;
+  width: 0%;
+  margin-top: 1rem;
+  display: block;
+  background: #8bfdfe;
+  animation: 3s lineGrow linear infinite;
+}
+
+@keyframes lineGrow {
+  to {
+    width: 100%;
+  }
+}
